# smartnic-bench

./: .gitignore  .gitmodules  README.md  makefile
benchs/: Cargo.toml
benchs/bench_util/: Cargo.toml
benchs/bench_util/src/: args.rs  lib.rs  rdtsc.rs  ud_endpoint.rs  ud_manager.rs  ud_message.rs
benchs/bench_util/src/doca/: args.rs
benchs/bench_util/src/doorbell/: doorbell.rs  mod.rs  rc_doorbell.rs  recv_doorbell.rs  ud_doorbell.rs
benchs/doca_dma/: Cargo.toml
benchs/doca_dma/src/: main.rs
benchs/doca_dma/src/bootstrap/: client_construct.rs  connection.rs  mod.rs  server_construct.rs
benchs/docs/: README.md  dma.md  doca_dma.md  one_sided_rdma.md  two_sided_rdma.md
benchs/one_sided_rdma/: Cargo.toml
benchs/one_sided_rdma/src/: main.rs
benchs/one_sided_rdma/src/bootstrap/: client_construct.rs  mod.rs  server_construct.rs
benchs/rdma_util/src/: rc_doorbell.rs  recv_doorbell.rs  ud_doorbell.rs
benchs/two_sided_rdma/: Cargo.toml
benchs/two_sided_rdma/src/bootstrap/: client_construct.rs  mod.rs  server_construct.rs
netbencher_core/: Cargo.toml  README.md
netbencher_core/examples/: coordinator_report_master.rs  coordinator_report_worker.rs  report_worker_stats.rs
netbencher_core/src/: lib.rs
netbencher_core/src/reporter/: coordinated_reporter.rs  mod.rs  simple_reporter.rs
