[package]
name = "bench_util"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
rand = "0.8.5"
rand_chacha = "*"
tokio = { version = "1.20.1", features = ["full"]}
KRdmaKit = { path = "../../deps/krcore/KRdmaKit", features = ["user"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
log = { version = "*"}
simplelog = "^0.12.0"

[features]
OFED_5_4 = ["KRdmaKit/OFED_5_4"]
ARM = []